# AIAG-P

./: .gitignore
aux/: AUX.md  BROWSER_MANAGER_README.md  CHANGELOG.md  FINAL_DEMONSTRATION.md  GAP_ANALYSIS.md  M4_IMPLEMENTATION_SUMMARY.md  M4_TESTING_FRAMEWORK_README.md  METRICS.md  README.md  RELEASE_PLAN.md  ROADMAP.md  SECURITY_AND_ENHANCEMENTS_SUMMARY.md  TEST_SUMMARY_REPORT.md  VALIDATION_REPORT.md  WEBSOCKET_SERVER_README.md  conftest.py  demo_server_client.py  example_usage.py  pyproject.toml  real_world_test.py  run_all_tests.sh  run_milestone_validation.py  test_browser_manager.py  test_enhancements.py  test_m1_dom_extraction.py  test_m2_command_validation.py  test_m3_state_handling.py  test_m4_integration.py  test_websocket_client.py  test_websocket_integration.py  user_test_client.py  validation_results.json
aux/.github/workflows/: test.yml
aux/demo/: DEMO_SUMMARY.md  README.md  demo.css  demo.js  docs.html  examples.json  index.html  launch_demo.sh  scenarios.js  serve_demo.py
aux/examples/: basic_usage.py
aux/fixtures/: performance_config.yaml  test_config.yaml
aux/scenarios/: advanced_interaction.yaml  error_handling_resilience.yaml  form_interaction_complete.yaml  multi_step_workflow.yaml  performance_benchmark.yaml  web_navigation_basic.yaml
aux/scripts/: run_tests.sh
aux/src/aux/: __init__.py  batch.py  cache.py  config.py  logging_utils.py  security.py
aux/src/aux/browser/: __init__.py  manager.py  pool.py
aux/src/aux/client/: __init__.py  sdk.py
aux/src/aux/schema/: __init__.py  commands.py
aux/src/aux/server/: __init__.py  websocket_server.py
aux/src/aux/testing/: __init__.py  cli.py  main.py  mock_agent.py  reporting.py  scenario_runner.py  test_harness.py
aux/src/aux_protocol.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
aux/tests/: README.md  README_TESTS.md  TESTING_GUIDE.md  TEST_SUMMARY_REPORT.md  __init__.py  conftest.py  run_browser_tests.py  test_browser.py  test_browser_manager.py  test_integration.py  test_integration_live.py  test_pages.py  test_server.py
aux/tests/e2e/: __init__.py  test_browser_compatibility.py  test_real_world_scenarios.py
aux/tests/integration/: __init__.py  test_browser_websocket_integration.py  test_client_sdk_integration.py  test_end_to_end_workflows.py  test_websocket_browser_integration.py
aux/tests/performance/: __init__.py  test_benchmarks.py  test_load_stress.py  test_stress_testing.py
aux/tests/regression/: __init__.py  test_backward_compatibility.py
aux/tests/security/: __init__.py  test_authentication_security.py  test_injection_attacks.py  test_penetration_testing.py  test_vulnerability_scanning.py
aux/tests/unit/: __init__.py  test_batch.py  test_browser_manager.py  test_cache.py  test_commands.py  test_config.py  test_schema_validation.py  test_security.py
